--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
    <h1>Welcome to {{ title }}</h1>
   
-   <!-- <app-about></app-about> 
-   <app-contacts></app-contacts> -->
+  <app-about></app-about> 
+   <app-contacts></app-contacts> 
 
-   <app-name></app-name>
-   <app-user></app-user>
+ <!--   <app-name></app-name>
+   <app-user></app-user> -->
 </div>
