--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -23,9 +23,11 @@
 
      <app-comment [commentList]="comments"></app-comment>
     </div>
-
-
 </div>
+
+<button class="btn btn-primary mt-3" (click)="onContacts()">
+ Go to Contacts
+</button>
 
 
 <!-- <h1>Names</h1>
