--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,32 @@
 <div class="container">
-   <h1>Welcome to {{ title }}</h1>
+ <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">{{title|uppercase}}</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/" >Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/about">About </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/contacts" >Contacts</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/signin" >Signin</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+  <h1>Welcome to {{ title }}</h1>
+   <router-outlet></router-outlet> 
   
-  <app-about></app-about> 
-   <app-contacts></app-contacts> 
+ <!--  <app-about></app-about> 
+   <app-contacts></app-contacts>  -->
 
  <!--   <app-name></app-name>
    <app-user></app-user> -->
