s4-ch5-routing-guard

--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,1 +1,8 @@
-<p>signin works!</p>
+
+<div>
+    <button class="btn btn-success" (click)="onSignIn()" [disabled]="isAuth">Signin</button>
+</div>
+<div class="mt-3">
+    <button class="btn btn-danger" (click)="onSignOut()" [disabled]="!isAuth">SignOut</button>
+</div>
+
