--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,1 +1,24 @@
-<p>contacts works!</p>
+<div class="card border-primary">
+    <div class="card-header bg-primary text-white">
+        Contacts Component
+    </div>
+    <div class="card-body">
+        <h2>Contact list</h2>
+       <table class="table table-hover">
+          <thead>
+            <tr>
+                  <th>Name</th>
+                  <td></td>
+                  <td></td>
+            </tr>       
+          </thead>
+          <tbody>
+            <tr *ngFor="let contact of contacts ">
+                <td>{{contact.name}}</td>
+                <td><a class="btn btn-success" routerLink="/contacts/{{contact.id}}">Detail</a></td>
+                <td><button class="btn btn-danger" (click)="onDeleteContact(contact.id)">Delete</button></td>
+            </tr>
+          </tbody>
+       </table>
+    </div>
+</div>
