--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,3 +1,6 @@
+<div class="mt-3 mb-3">
+    <button class="btn btn-primary" (click)="onAddContact()">Add Contact</button>
+</div>
 <div class="card border-primary">
     <div class="card-header bg-primary text-white">
         Contacts Component
